baby-steps, but simplifier still doesn't really work
# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
#
# On branch master
# Your branch is ahead of 'origin/master' by 2 commits.
#   (use "git push" to publish your local commits)
#
# Changes to be committed:
#	modified:   config/Makefile
#	modified:   hashcons_mlast/META.pl
#	modified:   hashcons_mlast/make-qast
#	modified:   hashcons_mlast/q_ast_camlp5.ml.TMPL
#	modified:   pa_simplify/META.pl
#	modified:   pa_simplify/Makefile
#	modified:   pa_simplify/pa_simplify.ml
#
# Changes not staged for commit:
#	modified:   tests/include_ml
#
# Untracked files:
#	hashcons_mlast/include_ml
#	pa_simplify/pa_simplify_ppo.ml
#	tests/TEST-PP
#	tests/test1.ml
#

--- a/hashcons_mlast/q_ast_camlp5.ml.TMPL
+++ b/hashcons_mlast/q_ast_camlp5.ml.TMPL
@@ -189,7 +189,9 @@ end
 
     }
   }]
-
+;;
+let hc_apply_entry = Pa_ppx_q_ast_runtime.hc_apply_entry
+;;
 List.map (fun (n,f) -> Quotation.add n f)
 [
 #include "hc_quotations.tmp"
